--- a/backend/app/assets/stylesheets/spree/backend/components/_main.scss
+++ b/backend/app/assets/stylesheets/spree/backend/components/_main.scss
@@ -9,11 +9,17 @@ body {
 
 
 #main-part {
-  padding-top: 15px;
-  padding-right: 35px;
-  padding-bottom: 0;
-  padding-left: $sidebar-width + 35;
+  padding-top: $grid-gutter-width;
+  padding-right: $grid-gutter-width;
+  padding-bottom: $grid-gutter-width;
+  padding-left: $sidebar-width + $grid-gutter-width;
   background-color: $ui-background-color;
+
+}
+
+#main-part:before, #main-part:after {
+  display: table;
+  content: " ";
 }
 
 .logo.navbar-brand {
@@ -22,11 +28,11 @@ body {
 
 div#content {
   background-color: $panel-background-color;
-
-  padding: 15px;
+  padding: $grid-gutter-width * 1.5;
   border-radius: $ui-border-radius;
   overflow-x: scroll;
-  box-shadow: 0 0 0 1px rgba(63,63,68,0.05),0 1px 3px 0 rgba(63,63,68,0.15);
+  -webkit-overflow-scrolling: touch;
+  box-shadow: $pannel-shaddow;
 }
 
 table#listing_orders tr {
@@ -36,10 +42,15 @@ table#listing_orders tr {
 
 aside#sidebar {
   background-color: white;
-  padding: 10px;
-  border: 1px solid $input-border;
+  padding: $grid-gutter-width;
+  box-shadow: $pannel-shaddow;
   border-radius: $ui-border-radius;
-  margin-right: -15px;
+
+}
+#dynamic-content-menu{
+padding-left: $grid-gutter-width;
+padding-right: 0;
+
 }
 
 .pagination {
