--- a/backend/app/assets/stylesheets/spree/backend/shared/_new_ui.scss
+++ b/backend/app/assets/stylesheets/spree/backend/shared/_new_ui.scss
@@ -1,8 +1,13 @@
 
 @media (max-width: 991px) {
+
+  body {
+    margin-bottom: 30px;
+  }
+
   #close-dynamic-content-menu {
     text-align: center;
-    margin: 15px -5px 0 auto;
+    margin: $grid-gutter-width $grid-gutter-width 0 auto;
   }
 
   div#dynamic-content-menu {
@@ -13,7 +18,7 @@
     margin: 0;
     float: none;
     overflow: hidden;
-    background: white;
+    background: $ui-background-color;
     border-top: 1px solid $input-border;
     -webkit-transition: all $menu-speed ease;
     -moz-transition: all $menu-speed ease;
@@ -21,14 +26,15 @@
     -ms-transition: all $menu-speed ease;
     transition: all $menu-speed ease;
     top: 110%;
+    padding-left: $grid-gutter-width;
+    padding-right: $grid-gutter-width;
   }
 
   aside#sidebar {
     margin: 0;
     border: none;
+    box-shadow: none;
     background: transparent;
-    margin-left: -15px;
-    margin-right: -15px;
     height: 80%;
     overflow: scroll;
   }
@@ -65,6 +71,7 @@
     transition: all $menu-speed ease;
     left: 0;
     overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
   }
 
   #sidebar-toggle span:nth-child(3) {
@@ -127,7 +134,7 @@
   }
 
   #main-part {
-    padding-left: 35px;
+    padding-left: $grid-gutter-width;
   }
 
   span.icon-filter {
@@ -138,7 +145,8 @@
     margin: 5px 0;
   }
 
-  #main-sidebar ul.nav.nav-pills li a {
+  #main-sidebar ul.nav ul.nav.nav-pills li a,
+  #main-sidebar ul.nav ul.nav.nav-pills li.selected a {
     padding: 15px 0 15px 43px;
     font-size: 12px;
   }
@@ -154,7 +162,7 @@
   }
 
   #account-email-menu {
-    padding: 7px 30px;
+    padding: 7px 45px;
     font-size: 1.5em;
   }
 
@@ -172,12 +180,26 @@
   }
 
   div.page-actions {
+
     text-align: center !important;
     position: fixed;
     bottom: 0;
     z-index: 999;
-    margin-left: -5px;
+    margin-left: -($grid-gutter-width / 2);
     background: white;
-    border-top: 1px solid tan;
+    border-top: 3px solid $random-accent;
   }
+
+}
+
+@media (max-width: 500px) {
+
+  div.page-actions button, div.page-actions a {
+    font-size:0;
+    > span.icon {
+      font-size:14px;
+      padding: 5px 10px;
+    }
+  }
+
 }
