--- a/backend/app/assets/stylesheets/spree/backend/shared/_base.scss
+++ b/backend/app/assets/stylesheets/spree/backend/shared/_base.scss
@@ -14,6 +14,13 @@ body {
   display: none;
 }
 
+input[type=number], input[type=text], input[type=password], input[type=email], input[type=tel] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  outline: none;
+}
+
 [role="button"],
 input,
 label,
@@ -21,10 +28,6 @@ select,
 textarea,
 a,
 button {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  outline: none;
   touch-action: manipulation;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
