--- a/backend/app/assets/stylesheets/spree/backend/shared/_mobile_adjustments.scss
+++ b/backend/app/assets/stylesheets/spree/backend/shared/_mobile_adjustments.scss
@@ -145,10 +145,17 @@
     margin: 5px 0;
   }
 
+  #main-sidebar ul.nav > li > a {
+    font-size: 16px;
+  }
+
+  #main-sidebar ul.nav > li > a > span.icon {
+    vertical-align: unset;
+  }
   #main-sidebar ul.nav ul.nav.nav-pills li a,
   #main-sidebar ul.nav ul.nav.nav-pills li.selected a {
-    padding: 15px 0 15px 43px;
-    font-size: 12px;
+    padding: 15px 0 15px 40px;
+    font-size: 16px;
   }
 
   .with-sidebar {
