--- a/backend/app/assets/stylesheets/spree/backend/components/_main.scss
+++ b/backend/app/assets/stylesheets/spree/backend/components/_main.scss
@@ -16,6 +16,10 @@ body {
   background-color: $ui-background-color;
 
 }
+#listing_orders span.label {
+  display: block;
+  padding: 0.5em;
+}
 
 #main-part:before, #main-part:after {
   display: table;
