--- a/backend/app/assets/stylesheets/spree/backend/global/_variables.scss
+++ b/backend/app/assets/stylesheets/spree/backend/global/_variables.scss
@@ -4,7 +4,7 @@
   $brand-primary: #0076BF;
   $brand-success: #74CE3A;
   $brand-info:    #48B0F7;
-  $brand-warning: #F8D053;
+  $brand-warning: #ffb932;
   $brand-danger:  #F55753;
   $random-accent: #DBA704;
   $input-border:  darken(#EDEDED, 5);
