--- a/backend/app/views/spree/admin/orders/_adjustments.html.erb
+++ b/backend/app/views/spree/admin/orders/_adjustments.html.erb
@@ -19,7 +19,7 @@
             <td>
               <strong><%= label %>:</strong>
             </td>
-            <td class="total">
+            <td class="total" style="width:35%;">
               <span>
                 <%= Spree::Money.new(
                   adjustments.sum(&:amount),
