--- a/backend/app/views/spree/admin/products/index.html.erb
+++ b/backend/app/views/spree/admin/products/index.html.erb
@@ -70,7 +70,7 @@
             <td class="image"><%= mini_image product %></td>
             <td><%= link_to product.try(:name), edit_admin_product_path(product) %></td>
             <td class="text-center"><%= product.display_price.to_html rescue '' %></td>
-            <td class="actions actions-3 text-right" data-hook="admin_products_index_row_actions">
+            <td class="actions actions-3 text-right" data-hook="admin_products_index_row_actions" style="width:140px;">
               <%= link_to_edit product, no_text: true, class: 'edit' if can?(:edit, product) && !product.deleted? %>
               <%= link_to_clone product, no_text: true, class: 'clone' if can?(:clone, product) %>
               <%= link_to_delete product, no_text: true if can?(:delete, product) && !product.deleted? %>
