--- a/backend/app/views/spree/admin/promotions/index.html.erb
+++ b/backend/app/views/spree/admin/promotions/index.html.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <% content_for :page_actions do %>
-  <%= button_link_to Spree.t(:new_promotion), new_object_url, class: "btn-success", icon: 'add' %>
+  <%= button_link_to Spree.t(:new_promotion), new_object_url, id: "admin_new_promotion_link", class: "btn-success", icon: 'add' %>
 <% end if can?(:create, Spree::Promotion) %>
 
 <% content_for :table_filter do %>
