--- a/backend/app/views/spree/admin/stores/index.html.erb
+++ b/backend/app/views/spree/admin/stores/index.html.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <% content_for :page_actions do %>
-  <%= button_link_to Spree.t(:add_store), spree.new_admin_store_path(@user), class: "btn-success", icon: 'add' if can?(:create, Spree::Store) %>
+  <%= button_link_to Spree.t(:add_store), spree.new_admin_store_path(@user), id:'add_store', class: "btn-success", icon: 'add' if can?(:create, Spree::Store) %>
 <% end %>
 
 <% if @stores.any? %>
