--- a/backend/app/views/spree/admin/orders/cart.html.erb
+++ b/backend/app/views/spree/admin/orders/cart.html.erb
@@ -2,6 +2,10 @@
 
 <%= render 'spree/admin/shared/order_tabs', current: :cart %>
 
+<% content_for :page_title do %>
+  / <%= Spree.t(:cart) %>
+<% end %>
+
 <div data-hook="admin_order_edit_header">
   <%= render 'spree/admin/shared/error_messages', target: @order %>
 </div>
