--- a/backend/app/assets/stylesheets/spree/backend/shared/_mobile_adjustments.scss
+++ b/backend/app/assets/stylesheets/spree/backend/shared/_mobile_adjustments.scss
@@ -211,6 +211,10 @@
     }
   }
 
+  div.content-header.page-header h1{
+    font-size: 1.2em;
+  }
+
   div.page-actions .btn.btn-success {
     font-size:16px;
 
