--- a/backend/app/assets/stylesheets/spree/backend/components/_navigation.scss
+++ b/backend/app/assets/stylesheets/spree/backend/components/_navigation.scss
@@ -12,6 +12,11 @@
   background-color: $navbar-background-color;
 }
 
+nav.navbar{
+  height: $navbar-height;
+}
+
+
 .navbar-inverse .navbar-nav > li > a {
   color: #555555 !important;
 }
