--- a/backend/app/assets/stylesheets/spree/backend/components/_page_header.scss
+++ b/backend/app/assets/stylesheets/spree/backend/components/_page_header.scss
@@ -1,6 +1,7 @@
 .content-header.page-header {
   margin-top: 0;
   margin-bottom: $grid-gutter-width;
+  padding-bottom: $grid-gutter-width;
 
   h1 {
     font-size: $font-size-h1 / 1.5;
