clean uppromotions view

--- a/backend/app/assets/stylesheets/spree/backend/components/_filters.scss
+++ b/backend/app/assets/stylesheets/spree/backend/components/_filters.scss
@@ -8,7 +8,9 @@
 .filter-wrap {
   margin-bottom: $grid-gutter-width;
 }
-
+#promotion-filters {
+  margin-top: $grid-gutter-width;
+}
 
 .index-filter-button {
   .glyphicon {
