--- a/backend/app/views/spree/admin/adjustments/_adjustments_table.html.erb
+++ b/backend/app/views/spree/admin/adjustments/_adjustments_table.html.erb
@@ -1,7 +1,7 @@
 <div class="panel-heading">
   <h3 class="panel-title"><%= Spree.t(:order_adjustments) %></h3>
 </div>
-
+<div class="table-responsive">
 <table class="table table-bordered adjustments" data-hook="adjustments">
   <thead data-hook="adjustmment_head">
     <tr>
@@ -16,14 +16,15 @@
     <%= render partial: "adjustment", collection: @adjustments %>
   </tbody>
 </table>
-
+</div>
 <% if can?(:edit, Spree::Adjustment) %>
   <div class="panel-footer">
     <div class="row text-center">
-      <div class="col-xs-6">
+      <div class="col-xs-12 col-md-6">
         <%= button_to Spree.t(:open_all_adjustments), open_adjustments_admin_order_path(@order), method: :get, class: "btn btn-success" %>
       </div>
-      <div class="col-xs-6">
+      <div class="text-center hidden-md hidden-lg"><p style="margin:0;">- <%= Spree.t(:or) %> -</p></div>
+      <div class="col-xs-12 col-md-6">
         <%= button_to Spree.t(:close_all_adjustments), close_adjustments_admin_order_path(@order), method: :get, class: "btn btn-danger" %>
       </div>
     </div>
