--- a/backend/app/assets/stylesheets/spree/backend/global/_variables.scss
+++ b/backend/app/assets/stylesheets/spree/backend/global/_variables.scss
@@ -24,6 +24,7 @@
 /*------------------------------------------
   Components
   -----------------------------------------*/
+  $ui-max-width: 1600px;
   $border-radius-base: 2px;
   $ui-border-radius: $border-radius-base + 2 ;
   $padding-base-vertical: 8px;
